--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -28,7 +28,7 @@ textarea {
 }
 
 .sidebar {
-    background-color: #f0f0f0;
+    background-color: #fdffd7;
     height: 100vh;
     padding: 10px;
 }
