--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -96,11 +96,14 @@ textarea {
 @-webkit-keyframes run {
     0% {
       left: -100%;
+      opacity: 0;
     }
     50% {
       left: -75%;
+      opacity: 0;
     }
     100% {
-      left: 0%;    
+      left: 0%;  
+      opacity: 1;  
     }
   }
