--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -25,7 +25,7 @@ textarea {
     background-color: #fdffd7;
     height: 100vh;
     padding-top: 30px;
-    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .sidebar h2 {
