--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -25,7 +25,13 @@ textarea {
     background-color: #fdffd7;
     height: 100vh;
     padding-top: 40px;
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
 }
+
 
 .sidebar h2 {
     margin-top: 5px;
