--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -31,6 +31,14 @@ textarea {
     box-shadow: 0 9px #999;
 }
 
+.index:hover {background-color: #3e8e41}
+
+.index:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 .sidebar h2 {
     margin-top: 5px;
 }
