--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -127,4 +127,15 @@ textarea {
     animation-name: show;
     animation-duration: 3s;
 }
+
+@media screen and (min-width: 320px) {
+    #imgx {
+      visibility: hidden;
+      clear: both;
+      float: left;
+      margin: 10px auto 5px 20px;
+      width: 28%;
+      display: none;
+    }
+  }
   
