--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -128,14 +128,8 @@ textarea {
     animation-duration: 3s;
 }
 
-@media screen and (min-width: 320px) {
-    #imgx {
-      visibility: hidden;
-      clear: both;
-      float: left;
-      margin: 10px auto 5px 20px;
-      width: 28%;
-      display: none;
-    }
-  }
-  
+@media only screen and (max-width: 900px) {
+ #hide-mobile 
+ {display:none;}
+}
+   
