--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -133,3 +133,68 @@ textarea {
  {display:none;}
 }
    
+#wrap {
+    height: 100%;
+    /*align-items: center;
+    justify-content: center;*/
+  }
+  
+.button{
+    width: 230px;
+    height: 60px;
+    font-family: sans-serif;
+    font-size: 22px;
+    /*text-transform: uppercase;*/
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #59ddee;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+ }
+
+.contact{
+    /*text-transform: uppercase;*/
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #59ddee;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+  
+.button:hover{
+    background-color: #93f5e7;
+    box-shadow: 0px 15px 20px #59ecee;
+    color: #fff;
+    transform: translateY(-7px);
+}
+
+.contact:hover{
+    background-color: #93f5e7;
+    box-shadow: 0px 15px 20px #59ecee;
+    color: #fff;
+    transform: translateY(-7px);
+}
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: space-evenly;
+}
+
+.flex-container > div {
+    margin: 10px;
+    padding: 30px;
+    font-size: 19px;
+
+  }
