--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -22,13 +22,20 @@ textarea {
     height: 100vh;
 }
 
-#sidebar {
+#sidebar { 
     background-color: #fdffd7;
     height: 100vh;
     padding-top: 40px;
-    position: relative;
+    position: fixed bottom;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  padding-top: 30%;
+}
 
 #barcon:hover {
     animation: wiggle;
@@ -133,7 +140,12 @@ textarea {
  #hide-mobile 
  {display:none;}
 }
-   
+
+@media only screen and (min-width: 901px) {
+    #hide-desktop 
+    {display:none;}
+}
+
 #wrap {
     height: 100%;
     /*align-items: center;
@@ -227,3 +239,79 @@ textarea {
 }
 
 /*style="color:#00478f"*/
+
+/* menu mobile */
+#menu__toggle {
+    opacity: 0;
+  }
+  #menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    left: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index:100;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: #fcd46e;
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  .menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100px;
+    height: 1000%;
+    margin: 0;
+    padding: 80px 30px;
+    list-style: none;
+    background-color: #d2fcfb;
+    box-shadow: 0px 15px 20px #59ecee;
+    transition-duration: .25s;
+    z-index:9;
+  }
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: .25s;
+    align-items: center;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+  
