--- a/Kang/styles.css
+++ b/Kang/styles.css
@@ -60,7 +60,8 @@ textarea {
   background-color: #fcd46e;
   color: black;
   text-align: center;
-  border-radius: 8px;
+  font-size: 12px;
+  border-radius: 80px;
   padding: 10px 9;
   
   /* Position the tooltip */
